<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED5D52"
    tools:context="ba.unsa.etf.rma24.projekat.NovaBiljkaActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pozadina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nazivET"
        style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#0F5E13"
        android:hint="Naziv"
        android:inputType="text"
        android:textColorHint="#CAB4B4"
        app:layout_constraintBottom_toTopOf="@id/medicinskoUpozorenjeET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/porodicaET"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,LabelFor,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/porodicaET"
        style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#4BBA4F"
        android:hint="Porodica"
        android:inputType="text"
        android:textColorHint="#D3BBBB"
        app:layout_constraintBottom_toTopOf="@id/jeloET"
        app:layout_constraintLeft_toRightOf="@id/nazivET"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,LabelFor,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/medicinskoUpozorenjeET"
        style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#6CA826"
        android:hint="Med. upozorenje"
        android:inputType="text"
        android:textColorHint="#DFC5C5"
        app:layout_constraintBottom_toTopOf="@id/medicinskaKoristLV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/jeloET"
        app:layout_constraintTop_toBottomOf="@+id/nazivET"
        tools:ignore="HardcodedText,LabelFor,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/jeloET"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginRight="16dp"
        android:background="#84CA33"
        android:hint="Jelo"
        android:inputType="text"
        android:textColorHint="#E4C8C8"
        app:layout_constraintBottom_toTopOf="@id/klimatskiTipLV"
        app:layout_constraintLeft_toRightOf="@id/medicinskoUpozorenjeET"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/porodicaET"
        tools:ignore="HardcodedText,LabelFor,VisualLintTextFieldSize" />

    <ListView
        android:id="@+id/medicinskaKoristLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#6CA826"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@id/zemljisniTipLV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/klimatskiTipLV"
        app:layout_constraintTop_toBottomOf="@id/medicinskoUpozorenjeET" />

    <ListView
        android:id="@+id/klimatskiTipLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#4BBA4F"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@id/profilOkusaLV"
        app:layout_constraintLeft_toRightOf="@id/medicinskaKoristLV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jeloET" />

    <ListView
        android:id="@+id/zemljisniTipLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="#4BBA4F"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@id/jelaLV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/profilOkusaLV"
        app:layout_constraintTop_toBottomOf="@id/medicinskaKoristLV" />

    <ListView
        android:id="@+id/profilOkusaLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#84CA33"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toTopOf="@id/slikaIV"
        app:layout_constraintLeft_toRightOf="@id/zemljisniTipLV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/klimatskiTipLV" />

    <ListView
        android:id="@+id/jelaLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="#84CA33"
        app:layout_constraintBottom_toTopOf="@id/dodajBiljkuBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/slikaIV"
        app:layout_constraintTop_toBottomOf="@id/zemljisniTipLV" />

    <Button
        android:id="@+id/dodajJeloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#009688"
        android:editable="true"
        android:text="Dodaj jelo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dodajBiljkuBtn"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/dodajBiljkuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#19CFE6"
        android:text="Dodaj biljku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dodajJeloBtn"
        app:layout_constraintRight_toLeftOf="@id/uslikajBiljkuBtn"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/uslikajBiljkuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#CDDC39"
        android:text="Uslikaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dodajBiljkuBtn"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/slikaIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/dodajBiljkuBtn"
        app:layout_constraintLeft_toRightOf="@id/jelaLV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilOkusaLV"
        app:srcCompat="@drawable/eucaliptus" />

</androidx.constraintlayout.widget.ConstraintLayout>